<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".Activity_registro" >

    <Switch
        android:id="@+id/switch_chef_registro"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:buttonTintMode="add"
        android:text="@string/eres_chef"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_usuario_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.691"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <EditText
        android:id="@+id/edt_usuario_registro"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/usuario_registro"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/switch_chef_registro"
        app:layout_constraintBottom_toTopOf="@+id/edt_contrasena_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <EditText
        android:id="@+id/edt_contrasena_registro"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrasena_registro"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/edt_contrasena2_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_usuario_registro"
        app:layout_constraintVertical_bias="0.102" />

    <EditText
        android:id="@+id/edt_contrasena2_registro"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrasena2_registro"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/ibtn_registrarse_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_contrasena_registro" />

    <ImageButton
        android:id="@+id/ibtn_registrarse_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_boton"
        android:contentDescription="@string/boton_registro"
        android:onClick="doRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_contrasena2_registro"
        app:srcCompat="@drawable/boton_registrate" />


</androidx.constraintlayout.widget.ConstraintLayout>