...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1">


    <ImageButton
        android:id="@+id/btn_lupa2"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/fondo_boton_redondo"
        android:contentDescription="@string/boton_lupa"
        android:onClick="buscar_usuario"
        app:layout_constraintBottom_toTopOf="@+id/rv_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@+id/edt_buscar_usuario"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@android:drawable/ic_menu_search"
        tools:ignore="ImageContrastCheck" />

    <TextView
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_logout_user"
        tools:ignore="ImageContrastCheck"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:background="@drawable/fondo_boton_redondo_logout"
        android:contentDescription="@string/boton_modperfil"
        android:onClick="logout"
...
