...
        android:layout_marginTop="136dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/fondo_boton"
        android:clickable="true"
        android:contentDescription="@string/boton_entrar"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/ibtn_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:srcCompat="@drawable/boton_entra" />

...
