...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/boton_confirmar" />

    <ImageButton
        android:id="@+id/btn_logout_user"
        tools:ignore="ImageContrastCheck"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/fondo_boton_redondo_logout"
        android:contentDescription="@string/boton_modperfil"
...
